--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -7,7 +7,7 @@ jobs:
     strategy:
       matrix:
         node-version: [12.x]
-        
+
     steps:
         - uses: actions/checkout@v1
 
@@ -21,7 +21,7 @@ jobs:
           uses: iCrawl/action-tsc@v1
         
         - name: NpM angular CLI 
-          uses: npm install angular-cli
+          uses: npm install -g @angular/cli
         
         - name: create app
           run: ng new My-app
