--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,10 +10,11 @@ jobs:
 
     steps:
       - uses: actions/checkout@v1
+      
       - name: Install Node
         uses: actions/setup-node@v1
           with:
-              node-version: [12.x]
+              node-version: 12.8
 
       - name: Install NPM
         run:  npm install
