--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -11,6 +11,11 @@ jobs:
     steps:
         - uses: actions/checkout@v1
 
+        - name: Use Node.js [12.x]
+          uses: actions/setup-node@v1
+          with:
+            node-version: [12.x]
+
         - name: Install NPM
           run:  npm install
         
