--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
           uses: iCrawl/action-tsc@v1
         
         - name: NpM angular CLI 
-          uses: npm install -g @angular/cli
+          run: npm install -g @angular/cli
         
         - name: create app
           run: ng new My-app
