--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,7 +35,7 @@ jobs:
           run: mkdir ./My-app/projects/pia-i18n
 
         - name: move files
-          run: mv ./[a-z]* ./My-app/pia-i18n
+          run: mv ./[a-z]* ./My-app/projects/pia-i18n
         
         - name: build library
           run:  cd My-app ; ng build pia-i18n
