--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -31,6 +31,9 @@ jobs:
         - name: create library
           run: cd My-app ; ng generate library pia-i18n
 
+        - name: clear directory
+          run: rm ./My-app/projects/pia-i18n/* -R
+
         - name: move files
           run: mv ./[a-z]* ./My-app/projects/pia-i18n
         
