--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,11 @@ jobs:
         - name: NpM angular CLI 
           run: npm install -g @angular/cli
 
-        - name: ngx-translate/core
+        - name: install ngx-translate/core
           run: npm install @ngx-translate/core --save
+
+        - name: install rxjs-compat
+          run: npm install --save rxjs-compat
         
         - name: create app
           run: ng new My-app
