--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -18,30 +18,24 @@ jobs:
 
         - name: Install NPM
           run:  npm install
-        
+
         - name: Update Npm
           run:  npm update
-        
-        - name: NpM angular CLI 
+
+        - name: NpM angular CLI
           run: npm install -g @angular/cli
 
-        - name: install ngx-translate/core
-          run: npm install @ngx-translate/core --save
+        - name: clone pia repo
+          run: git clone https://github.com/atnos/pia.git
 
-        - name: install rxjs-compat
-          run: npm install --save rxjs-compat
-        
-        - name: create app
-          run: ng new My-app
-        
         - name: create library
-          run: cd My-app ; ng generate library pia-i18n
+          run: cd pia ; ng generate library pia-i18n
 
         - name: clear directory
-          run: rm ./My-app/projects/pia-i18n/* -R
+          run: rm ./pia/projects/pia-i18n/* -R
 
         - name: move files
-          run: mv ./[a-z]* ./My-app/projects/pia-i18n
-        
+          run: mv ./!(pia) ./pia/projects/pia-i18n
+
         - name: build library
-          run:  cd My-app ; ng build pia-i18n
+          run: cd pia ; ng build pia-i18n
