--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -25,8 +25,15 @@ jobs:
         - name: NpM angular CLI
           run: npm install -g @angular/cli
 
+        - name: prepare to move
+          run: mkdir Move ; mv ./[a-z]* ./Move
+
         - name: clone pia repo
-          run: git clone https://github.com/atnos/pia.git
+          run: https://github.com/LINCnil/pia.git
+
+          # git clone https://github.com/atnos/pia.git
+          # your_username
+          # your_token
 
         - name: create library
           run: cd pia ; ng generate library pia-i18n
@@ -35,7 +42,7 @@ jobs:
           run: rm ./pia/projects/pia-i18n/* -R
 
         - name: move files
-          run: mv ./!(pia) ./pia/projects/pia-i18n
+          run: mv ./Move ./pia/projects/pia-i18n
 
         - name: build library
           run: cd pia ; ng build pia-i18n
