--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -29,7 +29,7 @@ jobs:
           run: mkdir Move ; mv ./[a-z]* ./Move
 
         - name: clone pia repo
-          run: https://github.com/LINCnil/pia.git
+          run: git clone https://github.com/LINCnil/pia.git
 
           # git clone https://github.com/atnos/pia.git
           # your_username
