--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,10 +39,10 @@ jobs:
           run: cd pia ; ng generate library pia-i18n
 
         - name: clear directory
-          run: cd .. ; rm ./pia/projects/pia-i18n/* -R
+          run: rm ./pia/projects/pia-i18n/* -R
 
         - name: move files
-          run: cd .. ; mv ./Move ./pia/projects/pia-i18n
+          run: mv ../Move ./pia/projects/pia-i18n
 
         - name: build library
           run: cd pia ; ng build pia-i18n
