--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -35,14 +35,17 @@ jobs:
           # your_username
           # your_token
 
-        - name: create library
-          run: cd pia ; ng generate library pia-i18n
+        # - name: create library
+        #   run: cd pia ; ng generate library pia-i18n
 
-        - name: clear directory
-          run: rm ./pia/projects/pia-i18n/* -R
+        # - name: clear directory
+        #   run: rm ./projects/pia-i18n/* -R
+
+        - name: prepare library
+        - run: mkdir ./pia/projects
 
         - name: move files
-          run: mv ../Move ./pia/projects/pia-i18n
+          run: mv ./Move ./pia/projects/pia-i18n
 
         - name: build library
           run: cd pia ; ng build pia-i18n
