--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -39,7 +39,7 @@ jobs:
         #   run: cd pia ; ng generate library pia-i18n
 
         # - name: clear directory
-        #   run: rm ./projects/pia-i18n/* -Ra
+        #   run: rm ./projects/pia-i18n/* -R
 
         - name: prepare library
         - run: mkdir ./pia/projects
