--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,8 +28,11 @@ jobs:
         - name: prepare to move
           run: mkdir Move ; mv ./[a-z]* ./Move
 
-        - name: clone pia repo
-          run: git clone https://github.com/LINCnil/pia.git
+        - name: create app
+          run: ng new pia
+
+        # - name: CREATE APP ANGULAR
+        #   run: git clone https://github.com/LINCnil/pia.git
 
           # git clone https://github.com/atnos/pia.git
           # your_username
@@ -39,7 +42,7 @@ jobs:
           run: cd pia ; ng generate library pia-i18n ; rm ./projects/pia-i18n/* -R
 
         - name: go to Move folder, get files and move them to pia-i18n
-          run: cd ./Move; mv ./[a-z]* ../pia/projects/pia-i18n
+          run: mv ./Move/[a-z]* ./pia/projects/pia-i18n
 
         - name: return pia projet and build library
           run: cd ./pia ; ng build pia-i18n
