--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -2,13 +2,15 @@
 {
   "extends": "../../tsconfig.json",
   "compilerOptions": {
+    "resolveJsonModule": true,
     "outDir": "../../out-tsc/spec",
     "types": [
       "jasmine"
     ]
   },
   "files": [
-    "src/test.ts"
+    "src/test.ts",
+    "src/polyfills.ts"
   ],
   "include": [
     "**/*.spec.ts",
