--- a/tsconfig.lib.prod.json
+++ b/tsconfig.lib.prod.json
@@ -2,6 +2,7 @@
 {
   "extends": "./tsconfig.lib.json",
   "compilerOptions": {
+    "skipLibCheck": true,
     "resolveJsonModule": true,
     "declarationMap": false
   },
