fix: allow synthetic import

--- a/tsconfig.spec.json
+++ b/tsconfig.spec.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "skipLibCheck": true,
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": "../../out-tsc/spec",
     "types": [
       "jasmine"
