--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "skipLibCheck": true,
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "outDir": "../../out-tsc/lib",
     "target": "es2015",
     "declaration": true,
