--- a/tsconfig.lib.prod.json
+++ b/tsconfig.lib.prod.json
@@ -4,6 +4,7 @@
   "compilerOptions": {
     "skipLibCheck": true,
     "resolveJsonModule": true,
+    "allowSyntheticDefaultImports": true,
     "declarationMap": false
   },
   "angularCompilerOptions": {
