fix: for declaration

--- a/tsconfig.lib.prod.json
+++ b/tsconfig.lib.prod.json
@@ -5,7 +5,8 @@
     "skipLibCheck": true,
     "resolveJsonModule": true,
     "allowSyntheticDefaultImports": true,
-    "declarationMap": false
+    "declaration": true,
+    "declarationMap": true,
   },
   "angularCompilerOptions": {
     "enableIvy": false
