fix: npm token declaration again

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,17 +10,18 @@ jobs:
 
     steps:
         - uses: actions/checkout@v1
+          # with:
+          #   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
         - name: Use Node.js ${{ matrix.node-version }}
           uses: actions/setup-node@v1
           with:
             node-version: ${{ matrix.node-version }}
+          env:
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
         - name: Install NPM
           run:  npm install
-
-        - env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
         - name: Update Npm
           run:  npm update
