feat: add env var on npm update

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -27,6 +27,8 @@ jobs:
 
         - name: Update Npm
           run:  npm update
+          env:
+            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
         - name: NpM angular CLI
           run: npm install -g @angular/cli@8.3.28
