--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,6 +13,9 @@ jobs:
           # with:
           #   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
+        - name: environment
+          run: echo "export ENV=DEV" > ~/.bashrc
+
         - name: Use Node.js ${{ matrix.node-version }}
           uses: actions/setup-node@v1
           with:
@@ -22,8 +25,6 @@ jobs:
 
         - name: Install NPM
           run:  npm install
-          env:
-            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
 
         # - name: Update Npm
         #   run:  npm update
