--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -60,7 +60,7 @@ jobs:
           run: cd ./pia ; ng build pia-i18n
 
         - name: create tgz file
-          run: cd ./pia/dist/pia-i18n ; npm pack ; npm install pia-i18n
+          run: cd ./pia/dist/pia-i18n ; npm pack ; npm install pia-i18n-0.0.1.tgz
 
         - name: publish library
           run: npm init --scope=atnos; npm publish ./pia/dist/pia-i18n/pia-i18n-0.0.1.tgz --access public
