--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -64,5 +64,5 @@ jobs:
 
         - name: publish library
           run: npm init --scope=atnos; npm publish ./pia/dist/pia-i18n/atnos-pia-i18n-0.0.1.tgz --access public
-          env:
-            NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
+          # env:
+          #   NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
