--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,9 @@ jobs:
           run: cd ./pia/dist/pia-i18n ; npm pack ; cd ../../; npm install ./dist/pia-i18n/atnos-pia-i18n-0.0.1.tgz
 
         - name: publish library
+          with:
+            registry-url: https://npm.pkg.github.com/
+            scope: '@atnos'
           run:  npm publish ./pia/dist/pia-i18n/atnos-pia-i18n-0.0.1.tgz --access public
           env:
             NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
