--- a/.npmrc
+++ b/.npmrc
@@ -1,2 +1,1 @@
-@atnos:registry=https://npm.pkg.github.com
-//registry.npmjs.org/:_authToken=${NODE_AUTH_TOKEN}
+@atnos:registry=https://npm.pkg.github.com/:_authToken=${NODE_AUTH_TOKEN}
