--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -63,6 +63,11 @@ jobs:
           run: cd ./pia/dist/pia-i18n ; npm pack ; cd ../../; npm install ./dist/pia-i18n/atnos-pia-i18n-0.0.1.tgz
 
         - name: publish library
-          run:  npm publish ./pia/dist/pia-i18n/atnos-pia-i18n-0.0.1.tgz --access public
+          run: |
+            npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
+            npm config set scope "<@atnos>"
+            npm config list
+            npm publish --access public 
           env:
-            NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
+            CI: true
+            NODE_AUTH_TOKEN: ${{secrets.npm_token}}
