--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -67,7 +67,7 @@ jobs:
             npm config set //registry.npmjs.org/:_authToken=$NODE_AUTH_TOKEN
             npm config set scope "<@atnos>"
             npm config list
-            npm publish --access public 
+            npm publish ./pia/dist/pia-i18n/atnos-pia-i18n-0.0.1.tgz --access public 
           env:
             CI: true
             NODE_AUTH_TOKEN: ${{secrets.npm_token}}
