--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -28,19 +28,31 @@ jobs:
           run: npm install -g @angular/cli@8.3.28
 
         - name: prepare to move
-          run: mkdir Move ; mv ./[a-z]* ./Move
+          run: |
+            mkdir Move
+            mv ./[a-z]* ./Move
 
-        - name: create app and prepare with dependancies
-          run: ng new pia; cd pia; npm install @ngx-translate/core; npm install @ngx-translate/http-loader;
+        - name: create app and add dependencies
+          run: |
+            ng new pia
+            cd pia
+            npm install @ngx-translate/core
+            npm install @ngx-translate/http-loader
 
         - name: prepare library
-          run: cd pia ; ng generate library pia-i18n ; rm ./projects/pia-i18n/* -R
+          run: |
+            cd pia
+            ng generate library pia-i18n
+            rm -R ./projects/pia-i18n/*
 
         - name: go to Move folder, get files and move them to pia-i18n
           run: mv ./Move/[a-z]* ./pia/projects/pia-i18n
 
         - name: return pia projet and build library
-          run: cd ./pia ; rm -f ./projects/pia-i18n/src/lib/assets/i18n/cnil.babel ; ng build pia-i18n 
+          run: |
+            cd ./pia
+            rm -f ./projects/pia-i18n/src/lib/assets/i18n/cnil.babel
+            ng build pia-i18n 
 
         - name: Set output
           id: vars
