feat: remove useless file and update tslint config

--- a/tsconfig.lib.json
+++ b/tsconfig.lib.json
@@ -15,6 +15,7 @@
     ]
   },
   "angularCompilerOptions": {
+    "fullTemplateTypeCheck": true,
     "skipTemplateCodegen": true,
     "strictMetadataEmit": true,
     "enableResourceInlining": true
