--- a/tsconfig.lib.prod.json
+++ b/tsconfig.lib.prod.json
@@ -7,7 +7,7 @@
     "allowSyntheticDefaultImports": true
   },
   "angularCompilerOptions": {
-    "fullTemplateTypeCheck": true,
-    "enableIvy": false
+    "compilationMode": "partial",
+    "fullTemplateTypeCheck": true
   }
 }
